// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Include toc Toc is included in link mode 1`] = `
"[
  ".revision.meta.json",
  "a1.md",
  "folder1/a1.md",
  "folder1/folder2/a1.md",
  "toc.yaml"
]"
`;

exports[`Include toc Toc is included in link mode 2`] = `
"This is the /a1.md file content.
"
`;

exports[`Include toc Toc is included in link mode 3`] = `
"This is the /folder1/a1.md file content.
"
`;

exports[`Include toc Toc is included in link mode 4`] = `
"This is the /folder1/folder1/a1.md file content.
"
`;

exports[`Include toc Toc is included in link mode 5`] = `
"items:
  - name: A1
    href: a1.md
  - name: folder1
    items:
      - name: A1
        href: folder1/a1.md
      - name: folder1
        items:
          - name: A1
            href: folder1/folder2/a1.md
base: .
deepBase: 0
"
`;

exports[`Include toc Toc is included inline, not as a new section 1`] = `
"[
  ".revision.meta.json",
  ".yfm",
  "file1.md",
  "fileA.md",
  "fileB.md",
  "fileC.md",
  "fileX.md",
  "folder/fileA.md",
  "folder/fileB.md",
  "folder/fileC.md",
  "folder/folder/fileC.md",
  "toc.yaml"
]"
`;

exports[`Include toc Toc is included inline, not as a new section 2`] = `
"applyPresets: true
"
`;

exports[`Include toc Toc is included inline, not as a new section 3`] = `
"# File 1
"
`;

exports[`Include toc Toc is included inline, not as a new section 4`] = `
"---
title: File A
description: YFM description
sourcePath: folder/fileA.md
---
# File A

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc Toc is included inline, not as a new section 5`] = `
"---
sourcePath: folder/fileB.md
---
# File B

Lorem Ipsum is simply dummy text of the printing and typesetting industry.

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc Toc is included inline, not as a new section 6`] = `
"---
sourcePath: folder/folder/fileC.md
---
# File C
"
`;

exports[`Include toc Toc is included inline, not as a new section 7`] = `
"# File X
"
`;

exports[`Include toc Toc is included inline, not as a new section 8`] = `
"---
title: File A
description: YFM description
---
# File A

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc Toc is included inline, not as a new section 9`] = `
"# File B

Lorem Ipsum is simply dummy text of the printing and typesetting industry.

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc Toc is included inline, not as a new section 10`] = `
"---
sourcePath: folder/folder/fileC.md
---
# File C
"
`;

exports[`Include toc Toc is included inline, not as a new section 11`] = `
"# File C
"
`;

exports[`Include toc Toc is included inline, not as a new section 12`] = `
"items:
  - name: Name1
    href: file1.md
  - name: NameA
    href: fileA.md
  - name: NameB
    href: fileB.md
  - name: NameC
    href: fileC.md
  - name: NameX
    href: fileX.md
base: .
deepBase: 0
"
`;

exports[`Include toc Toc with expressions 1`] = `
"[
  ".revision.meta.json",
  "a1.md",
  "index.yaml",
  "toc.yaml"
]"
`;

exports[`Include toc Toc with expressions 2`] = `
"This is the /a1.md file content.
"
`;

exports[`Include toc Toc with expressions 3`] = `
"title: Title A
description:
  - Desc A
meta:
  title: Meta A
links:
  - title: A1
    description: A1 desc
    href: a1
"
`;

exports[`Include toc Toc with expressions 4`] = `
"title: Title A
href: index.yaml
items:
  - name: A1
    href: a1.md
base: .
deepBase: 0
"
`;
